crates/ditto-checker/tests/golden/type-errors/infinite_type.ditto
module Test exports (..)

boom = fn (f) -> f(f)
